@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.868 2007-12-18 03:26:32 castaglia Exp $
+$Id: NEWS,v 1.869 2007-12-31 17:39:54 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -63,6 +63,7 @@ CVS
   sendfile is used.
 - Bug 3012 - SITE UTIME should support YYYYMMDDhhmmss format.
 - Bug 3013 - "TLSOptions AllowPerUser" not working as expected.
+- Bug 3019 - DisplayLogin in <Anonymous> section not displayed properly.
 
 1.3.1 - Released 5-Oct-2007
 --------------------------------
